--- a/src/pages/Index/template.less
+++ b/src/pages/Index/template.less
@@ -1,7 +1,7 @@
 @import "../../assets/base.less";
 
 #index {
-
+  
   .item {
     display: grid;
     grid: auto auto / 80px 1fr;
@@ -22,17 +22,19 @@
 
       figcaption {
         font-size: 12px;
-        color: @textLighterColor;
+        color: black;
+        font-size: larger;
       }
     }
 
     h3 {
       grid-column: 2;
       grid-row: 1;
+      font-size: 20px;
 
       &>span {
-        color: @textLighterColor;
-        font-size: 12px;
+        color: black;
+        font-size: 10px;
         font-weight: normal;
       }
     }
@@ -45,17 +47,16 @@
 
     
   }
-  .pagination{
-    display: grid;
-    justify-items: center;
-    padding-bottom: 30px;
+   .pagination{
+     padding-bottom: 30px;
+     padding-left: 50vh;
+     padding-right: 50vh;
   }
 
 
 
 
 }
-
 
 
 
