--- a/src/pages/Index/template.less
+++ b/src/pages/Index/template.less
@@ -1,7 +1,7 @@
 @import "../../assets/base.less";
 
 #index {
-  
+  padding: 0 15px;
   .item {
     display: grid;
     grid: auto auto / 80px 1fr;
