--- a/src/pages/Index/template.less
+++ b/src/pages/Index/template.less
@@ -24,6 +24,7 @@
         font-size: 12px;
         color: black;
         font-size: larger;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, .12), 0 6px 8px rgba(0, 0, 0, .04);
       }
     }
 
@@ -36,6 +37,7 @@
         color: black;
         font-size: 10px;
         font-weight: normal;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
       }
     }
 
@@ -43,6 +45,7 @@
       grid-column: 2;
       grid-row: 2;
       margin-top: 0;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
     }
 
     
