--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,4 +1,4 @@
 @themeColor: rgb(31, 41, 46);
 @themeLighterColor: rgb(202, 192, 184);
 @bgColor: rgb(31, 41, 46);
-@textLighterColor: #999;
+@textLighterColor: rgb(12, 12, 12);
