--- a/src/pages/My/template.less
+++ b/src/pages/My/template.less
@@ -63,7 +63,7 @@
       font-size: 12px;
 
       a {
-        color: @themeLighterColor;
+        color: @textLighterColor;
       }
       
     }
