鏍峰紡浼樺寲

--- a/src/pages/My/template.less
+++ b/src/pages/My/template.less
@@ -1,6 +1,11 @@
 @import "../../assets/base.less";
 
 #my,#user {
+  .pagination{
+    padding-bottom: 30px;
+    padding-left: 50vh;
+    padding-right: 50vh;
+ }
  
   .user-info {
     display: grid;
@@ -23,6 +28,7 @@
       grid-row: 1;
       margin-top: 10px;
     }
+    
   }
 
   .item {
