灏忕殑璋冭瘯

--- a/src/pages/My/template.less
+++ b/src/pages/My/template.less
@@ -2,9 +2,9 @@
 
 #my,#user {
   .pagination{
+    display: grid;
     padding-bottom: 30px;
-    padding-left: 50vh;
-    padding-right: 50vh;
+    text-align: center; 
  }
  
   .user-info {
