--- a/src/pages/Index/template.less
+++ b/src/pages/Index/template.less
@@ -25,6 +25,7 @@
         color: black;
         font-size: larger;
         box-shadow: 0 4px 6px rgba(0, 0, 0, .12), 0 6px 8px rgba(0, 0, 0, .04);
+        //width: 40px;
       }
     }
 
@@ -52,8 +53,7 @@
   }
    .pagination{
      padding-bottom: 30px;
-     padding-left: 50vh;
-     padding-right: 50vh;
+     text-align: center;
   }
 
 
